# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django_moncash"
version = "2.4.3"
description = "Installable django moncash"
readme = "README.md"
authors = [{ name = "Freedy Meritus", email = "meritusfreedy@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["moncash", "django", "payment", "SDK"]
dependencies = [
    "Django >= 2.2",
    "moncash >= 1.0.3"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/undisplay/django_moncash"

[project.scripts]