# setup.cfg
[metadata]
name = django_moncash
version = 1.0.0
description = Sample installable django moncash
long_description = file:README.rst
url = https://github.com/undisplay/django_moncash
license = GNU
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
    moncash>=1.0.3
# tests_require = 
test_suite = load_tests.get_suite